# Coding-Agents

./: .coverage  Readme.md  coverage.xml
.github/: WORKFLOWS.md
.github/workflows/: cd.yml  ci.yml
dummy-project/: .coverage  README.md  app.py  pyproject.toml  test_app.py
dummy-project/dummy_project.egg-info/: PKG-INFO  SOURCES.txt
